SERVER-51835 Respect preference order in read preference tag set list.

Fixes the streamable and sdam replica set monitors to obey the
documented preference order for matching against multiple tag sets.
In particular, once a match is found, that tag set is used to find all
eligible matching server members, and the remaining tag sets are
ignored.

(cherry picked from commit 7b5b262e93af9fd3773cc842816a3517ced81e09)